# rp2040-freertos-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
freertos/: CMakeLists.txt  FreeRTOSConfig.h
project-files/: CMakeLists.txt  main.c
